--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Dela+Gothic+One&family=Lato:wght@300&family=Nanum+Gothic:wght@400;700;800&display=swap');
 
-*,
-::before,
-::after {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
 :root {
   --dark-blue: #39789D;
   --witting-blue: #B3E1EF;
@@ -18,4 +10,174 @@
   --font-main-heading: 'Dela Gothic One', cursive;
   --font-heading: 'Nanum Gothic';
   --font-para: 'Lato';
+}
+
+*,
+::before,
+::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  background: linear-gradient(to bottom, var(--dark-blue),  var(--blue)) no-repeat;
+  height: 100%;
+  min-height: 100vh;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
+.App-header {
+  display: flex;
+  align-items: center;
+  gap: 5rem;
+  padding: 2rem 3rem;
+}
+
+.logo {
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+}
+
+.logo-heading {
+  background-image: url(./assets/blueLogoBg.jpg);
+  background-repeat: repeat;
+  background-clip: content-box;
+  -webkit-text-fill-color: transparent;
+  -webkit-background-clip: text;
+  font-size: 1.5rem;
+  line-height: 45px;
+  text-transform: uppercase;
+  font-family: var(--font-main-heading), sans-serif;
+  font-weight: 900;
+  color: var(--writting-blue);
+}
+
+.logo-image {
+  height: 2.5rem;
+}
+
+nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 2rem;
+}
+
+nav a {
+  color: var(--witting-blue);
+  font-size: medium;
+  font-family: var(--font-heading);
+  font-weight: 900;
+}
+
+.form-container {
+  display: flex;
+  justify-content: space-between;
+  margin: 9rem 15% 3rem 15%;
+  padding: 0.5rem 2rem;
+  border: 1px solid var(--off-white);
+  box-shadow: 6px 24px 52px -10px rgba(0, 0, 0, 0.75);
+  -webkit-box-shadow: 6px 24px 52px -10px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 6px 24px 52px -10px rgba(0, 0, 0, 0.75);
+  border-radius: 1.5rem;
+  background-color: var(--off-white);
+  opacity: 0.5;
+}
+
+.input-text,
+.input-submit {
+  border: none;
+  outline: none;
+  background-color: transparent;
+}
+
+.input-text {
+  flex: 1;
+  color: var(--grey);
+  font-weight: 900;
+}
+
+.input-text::placeholder {
+  color: var(--grey);
+  font-weight: 200;
+}
+
+.aqi-details {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+  margin: 0 10%;
+  padding: 5%;
+  box-shadow: 4px 5px 10px 0px rgba(0,0,0,0.75);
+  -webkit-box-shadow: 4px 5px 10px 0px rgba(0,0,0,0.75);
+  -moz-box-shadow: 4px 5px 10px 0px rgba(0,0,0,0.75);
+}
+
+.location-heading {
+  font-family: var(--font-heading);
+  color: var(--witting-blue);
+}
+
+.location-para {
+  font-family: var(--font-para);
+  line-height: 1.2rem;
+  color: var(--witting-blue);
+}
+
+.quality {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+  color: var(--witting-blue);
+}
+
+.aqi-quality {
+  font-family: var(--font-heading);
+  font-size: 1.2rem;
+}
+
+table {
+  border-collapse: collapse;
+}
+
+table,
+tr,
+td,
+th {
+  border: 1px solid var(--grey);
+  text-align: start;
+  vertical-align: text-top;
+  padding: 1rem 2rem 1rem 0.3rem;
+  color: var(--witting-blue);
+}
+
+th {
+  text-align: center;
+}
+
+th,tbody tr:nth-child(even) {
+  background-color: var(--dark-blue);
+}
+
+.page-not-found {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 10% 20%;
+  padding: 2rem 4rem 10rem 4rem;
+  box-shadow: 4px 5px 10px 0px rgba(0,0,0,0.75);
+-webkit-box-shadow: 4px 5px 10px 0px rgba(0,0,0,0.75);
+-moz-box-shadow: 4px 5px 10px 0px rgba(0,0,0,0.75);
+}
+
+.page-not-found-link {
+  align-self: flex-start;
+  margin-bottom: 3rem;
 }
