--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Dela+Gothic+One&family=Lato:wght@300&family=Nanum+Gothic:wght@400;700;800&display=swap');
 
 :root {
-  --dark-blue: #39789D;
-  --witting-blue: #B3E1EF;
-  --blue: #6EB5CD;
-  --off-white: #F4F2F4;
+  --dark-blue: #39789d;
+  --witting-blue: #b3e1ef;
+  --blue: #6eb5cd;
+  --off-white: #f4f2f4;
   --light-grey: #d3d3d3;
   --grey: #4b4c4e;
   --font-main-heading: 'Dela Gothic One', cursive;
@@ -21,7 +21,7 @@
 }
 
 body {
-  background: linear-gradient(to bottom, var(--dark-blue),  var(--blue)) no-repeat;
+  background: linear-gradient(to bottom, var(--dark-blue), var(--blue)) no-repeat;
   height: 100%;
   min-height: 100vh;
 }
@@ -114,17 +114,18 @@ nav a {
   gap: 0.5rem;
   margin: 0 10% 5rem 10%;
   padding: 5%;
-  box-shadow: 4px 5px 10px 0px rgba(0,0,0,0.75);
-  -webkit-box-shadow: 4px 5px 10px 0px rgba(0,0,0,0.75);
-  -moz-box-shadow: 4px 5px 10px 0px rgba(0,0,0,0.75);
+  box-shadow: 4px 5px 10px 0 rgba(0, 0, 0, 0.75);
+  -webkit-box-shadow: 4px 5px 10px 0 rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 4px 5px 10px 0 rgba(0, 0, 0, 0.75);
 }
 
-.back-button,.page-not-found-link {
+.back-button,
+.page-not-found-link {
   align-self: flex-start;
   background: transparent;
   border: none;
   color: var(--witting-blue);
-  font-family: var(--font-heading),sans-serif;
+  font-family: var(--font-heading), sans-serif;
   font-size: medium;
   margin-bottom: 1rem;
   cursor: pointer;
@@ -173,7 +174,8 @@ th {
   text-align: center;
 }
 
-th,tbody tr:nth-child(even) {
+th,
+tbody tr:nth-child(even) {
   background-color: var(--dark-blue);
 }
 
@@ -184,9 +186,9 @@ th,tbody tr:nth-child(even) {
   align-items: center;
   margin: 10% 20%;
   padding: 2rem 4rem 10rem 4rem;
-  box-shadow: 4px 5px 10px 0px rgba(0,0,0,0.75);
--webkit-box-shadow: 4px 5px 10px 0px rgba(0,0,0,0.75);
--moz-box-shadow: 4px 5px 10px 0px rgba(0,0,0,0.75);
+  box-shadow: 4px 5px 10px 0 rgba(0, 0, 0, 0.75);
+  -webkit-box-shadow: 4px 5px 10px 0 rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 4px 5px 10px 0 rgba(0, 0, 0, 0.75);
 }
 
 .page-not-found-heading {
@@ -203,9 +205,9 @@ th,tbody tr:nth-child(even) {
   flex-direction: column;
   margin: 0 10% 5rem 10%;
   padding: 5%;
-  box-shadow: 4px 5px 10px 0px rgba(0,0,0,0.75);
-  -webkit-box-shadow: 4px 5px 10px 0px rgba(0,0,0,0.75);
-  -moz-box-shadow: 4px 5px 10px 0px rgba(0,0,0,0.75);
+  box-shadow: 4px 5px 10px 0 rgba(0, 0, 0, 0.75);
+  -webkit-box-shadow: 4px 5px 10px 0 rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 4px 5px 10px 0 rgba(0, 0, 0, 0.75);
 }
 
 .pagination {
@@ -215,7 +217,7 @@ th,tbody tr:nth-child(even) {
   color: var(--witting-blue);
 }
 
-.pagination li a{
+.pagination a {
   border: 1px solid var(--witting-blue);
   padding: 0.4rem 1rem;
   cursor: pointer;
@@ -223,14 +225,15 @@ th,tbody tr:nth-child(even) {
 
 .city-list {
   display: grid;
-  grid-template-columns: repeat(4, 1fr);;
+  grid-template-columns: repeat(4, 1fr);
   gap: 0.5rem;
 }
 
 .city-list li {
   color: var(--witting-blue);
-  list-style: circle ;
+  list-style: circle;
 }
+
 .city-list a {
   color: var(--witting-blue);
   text-decoration: underline;
