--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Dela+Gothic+One&family=Lato:wght@300&family=Nanum+Gothic:wght@400;700;800&display=swap');
 
 :root {
-  --dark-blue: #39789d;
+  --dark-blue: #306FB4;
   --witting-blue: #b3e1ef;
-  --blue: #6eb5cd;
+  --blue: #5590C7;
   --off-white: #f4f2f4;
   --light-grey: #d3d3d3;
   --grey: #4b4c4e;
@@ -205,9 +205,6 @@ tbody tr:nth-child(even) {
   flex-direction: column;
   margin: 0 10% 5rem 10%;
   padding: 5%;
-  box-shadow: 4px 5px 10px 0 rgba(0, 0, 0, 0.75);
-  -webkit-box-shadow: 4px 5px 10px 0 rgba(0, 0, 0, 0.75);
-  -moz-box-shadow: 4px 5px 10px 0 rgba(0, 0, 0, 0.75);
 }
 
 .pagination {
@@ -225,16 +222,56 @@ tbody tr:nth-child(even) {
 
 .city-list {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap: 0.5rem;
+  grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
+  gap: 3rem 2rem;
+}
+
+.city-list .card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1rem;
+  padding: 1rem 0.5rem;
+  border: 1px solid var(--off-white);
+  background-color: var(--blue);
+  box-shadow: 4px 5px 10px 0 rgba(0, 0, 0, 0.75);
+  -webkit-box-shadow: 4px 5px 10px 0 rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 4px 5px 10px 0 rgba(0, 0, 0, 0.75);
 }
 
 .city-list li {
   color: var(--witting-blue);
-  list-style: circle;
+  list-style: none;
 }
+
+.city-list .card-img {
+  background-image: url(./assets/map1.jpg);
+  width: 240px;
+  height: 130px;
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  overflow: hidden;
+}
+
+.card-img img {
+  opacity: 0;
+  }
 
 .city-list a {
   color: var(--witting-blue);
   text-decoration: underline;
+}
+
+@media only screen and (max-width: 600px) {
+  .city-list {
+    row-gap: 1rem;
+  }
+
+  .city-list .card-img {
+    display: none;
+  }
+  .city-list .card {
+    border-radius: 10px;
+  }
 }
