--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Dela+Gothic+One&family=Lato:wght@300&family=Nanum+Gothic:wght@400;700;800&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Dela+Gothic+One&family=Lato:wght@500&family=Nanum+Gothic:wght@400;700;800&display=swap');
 :root {
-  --dark-blue: #306FB4;
+  --dark-blue: #306fb4;
   --witting-blue: #b3e1ef;
-  --blue: #5590C7;
+  --blue: #5590c7;
   --off-white: #f4f2f4;
   --light-grey: #d3d3d3;
   --grey: #4b4c4e;
@@ -231,7 +230,7 @@ tbody tr:nth-child(even) {
   flex-direction: column;
   align-items: center;
   gap: 1rem;
-  padding: 1rem 0.5rem;
+  padding: 1rem 1rem 4rem 1rem;
   border: 1px solid var(--off-white);
   background-color: var(--blue);
   box-shadow: 4px 5px 10px 0 rgba(0, 0, 0, 0.75);
@@ -239,13 +238,25 @@ tbody tr:nth-child(even) {
   -moz-box-shadow: 4px 5px 10px 0 rgba(0, 0, 0, 0.75);
 }
 
-.city-list li {
+.city-list h1 {
+  align-self: flex-end;
   color: var(--witting-blue);
-  list-style: none;
+  font-family: var(--font-para), sans-serif;
+  font-size: 1.5rem;
+  font-weight: 500;
+  margin-right: 1.5rem;
+  width: 50%;
+}
+
+.heading2 {
+  text-align: end;
+}
+
+.heading1 {
+  display: none;
 }
 
 .city-list .card-img {
-  background-image: url(./assets/map1.jpg);
   width: 240px;
   height: 130px;
   background-position: center center;
@@ -256,22 +267,32 @@ tbody tr:nth-child(even) {
 
 .card-img img {
   opacity: 0;
-  }
-
-.city-list a {
-  color: var(--witting-blue);
-  text-decoration: underline;
 }
 
-@media only screen and (max-width: 600px) {
+.city-list a {
+  align-self: flex-end;
+  color: var(--witting-blue);
+  text-decoration: underline;
+  margin-right: 1.5rem;
+}
+
+@media only screen and (max-width: 746px) {
   .city-list {
     row-gap: 1rem;
   }
 
-  .city-list .card-img {
+  .city-list .card-img, .heading2 {
     display: none;
   }
+
   .city-list .card {
+    flex-direction: row;
+    justify-content: space-between;
     border-radius: 10px;
+  }
+
+  .heading1 {
+    display: block;
+    margin-right: 0;
   }
 }
