--- a/src/App.css
+++ b/src/App.css
@@ -212,9 +212,13 @@ tbody tr:nth-child(even) {
   color: var(--witting-blue);
 }
 
-.pagination a {
+.pagination li {
   border: 1px solid var(--witting-blue);
-  padding: 0.4rem 1rem;
+  padding: 0.4rem 0.5rem;
+}
+
+.pagination a {
+  padding: 0.3rem 0.5rem;
   cursor: pointer;
 }
 
@@ -276,12 +280,18 @@ tbody tr:nth-child(even) {
 }
 
 @media only screen and (max-width: 746px) {
-  header {
+  .App-header {
     justify-content: space-between;
-    gap: 1rem;
+    gap: 0.4rem;
+    padding: 2rem;
+  }
+
+  .logo-heading {
+    font-size: 1rem;
   }
 
   .city-list {
+    grid-template-columns: 1fr;
     row-gap: 0;
   }
 
@@ -313,5 +323,23 @@ tbody tr:nth-child(even) {
 
   .home {
     display: none;
+  }
+
+  .pagination {
+    margin-left: 0.3rem;
+    margin-right: 0.3rem;
+  }
+
+  .form-container {
+    margin: 4rem 10% 3rem 10%;
+  }
+
+  .cities {
+    margin: 0 0 5rem 0;
+    padding: 0;
+  }
+
+  .aqi-details {
+    margin: 1rem 5% 5rem 5%;
   }
 }
